[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Matrix exercise for dependency management with Poetry"
authors = ["Dinis Marques <student@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
